# ConnectFour

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: implementation_document.md  project_specification.md  testing_document.md  user_manual.md
documentation/src/: constants.py  main.py
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: AI_engine.py  board.py  constants.py  game.py  main.py
src/tests/: AI_test.py  game_test.py
