[tool.poetry]
name = "tiralabra-k23"
version = "0.1.0"
description = ""
authors = ["Nicolas <kivimakinicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "tiralabra_k23"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
invoke = "^2.1.2"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
